# churn-demo

./: pyproject.toml
churn_demo/: demo.py
data/: account_level_churn_scores.csv  customer_logins_data.csv
scripts/: generate_fake_data.py
