[tool.poetry]
name = "churn-demo"
version = "0.1.0"
description = ""
authors = ["Doug Doan <993727+ddoan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12.3"
superlinked = "^8.11.0"
faker = "^26.0.0"
altair = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
